--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/jquery.dataTables.css">
     <title><%=pageTitle%></title>
 </head>
 <body>
     <main>
-        <h1 id="titulo">Hola</h1>
+    <div class="container">   
+    <table id="table_id" class="display table table-bordered table-rounded">
+    <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Posición</th>
+                <th>Oficina</th>
+                <th>Ext.</th>
+                <th>Fecha de inicio</th>
+                <th>Salario</th>
+            </tr>
+        </thead>
+        <tfoot>
+        <tr>
+        <th>Nombre</th>
+        <th>Posición</th>
+        <th>Oficina</th>
+        <th>Ext.</th>
+        <th>Fecha de inicio</th>
+        <th>Salario</th>
+    </tr>
+        </tfoot>
+    </table>
+    </div>
     </main>
+    <script type="text/javascript" src="js/bundle.js"></script>
 </body>
 </html>
